--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ numpy
 openpyxl
 semhash
 spacy
+Unidecode
 pl-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0.tar.gz
 
